--- a/Assignment3_ipynb.ipynb
+++ b/Assignment3_ipynb.ipynb
@@ -32,7 +32,7 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [],
       "metadata": {
         "id": "aUAA3qcYXA0C"
@@ -67,7 +67,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +79,7 @@
       ],
       "metadata": {
         "id": "RKb-9V1LXA0F",
-        "outputId": "ce85f801-821e-4073-9315-34c1b80b7fdc",
+        "outputId": "056240d1-3afc-4709-c5e3-752fe33d0771",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -189,7 +189,7 @@
         "test_data_w = data_processing(path_test_w,test_data_w)\n",
         "test_data_m = data_processing(path_test_m,test_data_m)"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [],
       "metadata": {
         "id": "CnY49q-JXA0I"
@@ -206,7 +206,7 @@
         "plt.figure()\n",
         "plt.imshow(train_data[4,1,1,:,:,:]) # right shoe of second pair submitted by 5th student"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,11 +221,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f2ad4db3190>"
+              "<matplotlib.image.AxesImage at 0x7f6a557f1b50>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -266,7 +266,7 @@
       ],
       "metadata": {
         "id": "r2LV8L4jXA0J",
-        "outputId": "ce79ef67-9943-4cb9-85e1-9c332af31502",
+        "outputId": "c80ceb7d-ee60-416f-fae5-57c948591f9f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 842
@@ -324,7 +324,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,7 +340,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "90458096-6a3a-4e07-d654-60d739cd6658"
+        "outputId": "102a1519-83d7-477d-da35-97f96ce20b3e"
       }
     },
     {
@@ -381,7 +381,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,11 +402,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f29cf212710>"
+              "<matplotlib.image.AxesImage at 0x7f6a5424e4d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         },
         {
           "output_type": "display_data",
@@ -427,7 +427,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 338
         },
-        "outputId": "409e1d21-cb4a-4908-d78b-6660b66bd09f"
+        "outputId": "2617da3b-8fa0-4e17-f9d5-b62842a738a2"
       }
     },
     {
@@ -569,7 +569,7 @@
         "model.train()\n",
         "x = model(test_data_mm)"
       ],
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [],
       "metadata": {
         "id": "9NE8MzNGXA0O"
@@ -642,7 +642,7 @@
         "        return x\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [],
       "metadata": {
         "id": "MhEI4kXlXA0O"
@@ -665,7 +665,7 @@
       "cell_type": "markdown",
       "source": [
         "**Write your explanation here:**\n",
-        "the CNN taking one input containing two shoes on the same dimension, . For CNNChannel, stacking both images along the channel dimension . \n",
+        "CNNChannel, stacking both images along the channel dimension would give us better performance. \n",
         "The network can notice the differences between the channels more easily than noticing the differences within the channels themselves."
       ],
       "metadata": {
@@ -691,7 +691,8 @@
       "cell_type": "markdown",
       "source": [
         "**Write your explanation here:**\n",
-        "****************************************"
+        "****************************************\n",
+        "We want to compute the accuracy on positive and negative samples separatly because we want our model to clasify in a balanced way and also so we can conlude better how we can improve our model. For example we could get 100% accuracy at positive samples just by predicting that all the samples are true (matching pair) that would yield 0% accuracy at negative samples, But the total accuracy would be 50% and it is very not balanced."
       ],
       "metadata": {
         "id": "CQRprStfXA0P"
@@ -744,7 +745,7 @@
         "        correct += len((pred-ts).nonzero()) \n",
         "    return (1-round(correct / n, 2))*100"
       ],
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": [],
       "metadata": {
         "id": "wfWsat6dXA0P"
@@ -911,7 +912,7 @@
         "    print(\"Training Accuracy: {}\".format(train_acc[-1]))\n",
         "    print(\"Validation Accuracy: {}\".format(val_acc[-1]))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [],
       "metadata": {
         "id": "qkI7i3MRXA0Q"
@@ -957,7 +958,7 @@
         "get_test_accuracy(cnnChannel,  train_data[:4, :, :, :, :, :])\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1170,7 +1171,7 @@
         "print(\"final results for Q2(b) \")\n",
         "print(get_test_accuracy(cnnChannel,  train_data[:24, :, :, :, :, :]))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1390,7 +1391,7 @@
         "print(\"final results for Q2(b) \")\n",
         "print(get_test_accuracy(cnnChannel,  train_data[:96, :, :, :, :, :]))"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1557,7 +1558,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
