--- a/Assignment3_ipynb.ipynb
+++ b/Assignment3_ipynb.ipynb
@@ -1127,7 +1127,7 @@
       "cell_type": "markdown",
       "source": [
         "**Write your explanation here:**\n",
-        "Due to colab's limitations and to save time we chose to use 24 person information. While searching for the better network we started from learning_rate=0.1, we saw that the network does not converge and then we went down to learning_rate=0.001.We chose the batch_size to avoid memorizing and on the other hand we tried to allow convergence in a reasonable time, in our results you can see the comparison between n = 4,  kernel size = 5 and n = 2,  kernel size = 3 for CNN and CNNChannel networks .we get that CNNChannel much more better then CNN in the two בases ,also for n = 2,  kernel size = 3 the results is better."
+        "Due to colab's limitations and to save time we chose to use 24 person information. While searching for the better network we started from learning_rate=0.1, we saw that the network does not converge and then we went down to learning_rate=0.001.We chose the batch_size to avoid memorizing and on the other hand we tried to allow convergence in a reasonable time, in our results you can see the comparison between n = 4,  kernel size = 5 and n = 2,  kernel size = 3 for CNN and CNNChannel networks .we get that CNNChannel much better then CNN in the two cases ,also for n = 2,  kernel size = 3 the results are better."
       ],
       "metadata": {
         "id": "LdK21AipXA0S"
